# EPP_final_project_minwage

./: CITATION  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: minwage.tex  minwage_pres.tex  task_paper.py
src/minwage/: __init__.py
src/minwage/analysis/: task_analysis.py
src/minwage/data_management/: __init__.py  task_data_management.py
src/minwage/final/: __init__.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
