[metadata]
name = minwage
description = minwage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luciagomezll/minwage
author = Lucia Gomez Llactahuamani
author_email = s6lugome@uni-bonn.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/luciagomezll/minwage
    Documentation = https://github.com/luciagomezll/minwage
    Github = https://github.com/luciagomezll/minwage
    Tracker = https://github.com/luciagomezll/minwage/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/minwage/_version.py
